--- a/webpersonal/core/templates/core/base.html
+++ b/webpersonal/core/templates/core/base.html
@@ -50,9 +50,11 @@
 
 
     <!-- Contenido -->
-    {% block content %}{% endblock %}
-
-    <!-- Pié de página -->
+    <div class="container">
+        {% block content %}{% endblock %}
+   </div>
+   {% if request.path != "/" %}<hr>{% endif %}
+   <!-- Pié de página -->
     <footer>
         <div class="container">
             <div class="row">
