--- a/webpersonal/core/templates/core/about.html
+++ b/webpersonal/core/templates/core/about.html
@@ -13,13 +13,10 @@
  src="{% static 'core/img/avatar.jpg' %}" alt="">
  </div>
  <div class="col-lg-7 col-md-8">
- <h2 class="section-heading">Juan Pérez</h2>
- <p>Nacido en... lorem ipsum dolor sit amet, consectetur
- adipisicing elit. Saepe nostrum ullam eveniet pariatur
- voluptates odit, fuga atque ea nobis sit soluta odio.</p>
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
- Saepe nostrum ullam eveniet pariatur voluptates odit...</p>
- </div>
+ <h2 class="section-heading">Claudia López Rodríguez</h2>
+ <p>Estudiante de Ingeniería Matemática con experiencia en programación en Python, análisis de datos y Machine Learning. Capacitada para desarrollar soluciones eficientes utilizando algoritmos avanzados, optimización numérica y modelos predictivos. Mi formación me permite abordar problemas complejos, desde el análisis estadístico hasta la implementación de modelos de aprendizaje automático, adaptándome a diversas tecnologías y entornos.</p>
+ <p> Me enfoco en aplicar mis habilidades para encontrar soluciones innovadoras a retos interdisciplinarios, manteniendo siempre un enfoque en la mejora continua y la excelencia técnica.</p>    
+</div>
 </div>
 {% endblock %}
 
