--- a/webpersonal/core/templates/core/home.html
+++ b/webpersonal/core/templates/core/home.html
@@ -2,9 +2,13 @@
 {% load static %}
 {% block title %}Portada{% endblock %}
 {% block background %}{% static 'core/img/home-bg.jpg' %}{% endblock %}
+{% block content %}
+ <p style="font-size: 20px; text-align: justify;">¡Bienvenidos!
+    En esta página encontrarás detalles sobre mi trayectoria académica, mi experiencia profesional y los proyectos en los que he trabajado. Espero que esta información te ayude a conocerme mejor y a descubrir cómo puedo contribuir a nuevos desafíos y colaboraciones. </p>
+{% endblock %}
 {% block headers %}
- <h1>Juan Pérez</h1>
- <span class="subheading">Ingeniero Industrial</span>
+ <h1>Claudia López Rodríguez</h1>
+ <span class="subheading">Ingeniera Matemática</span>
 {% endblock %}
 
 
