--- a/webpersonal/portfolio/templates/portfolio/portfolio.html
+++ b/webpersonal/portfolio/templates/portfolio/portfolio.html
@@ -7,6 +7,8 @@
  <span class="subheading">Currículo</span>
 {% endblock %}
 {% block content %}
+    <p style="font-size: 20px; text-align: justify;"> En esta sección, destaco mi trayectoria académica y los cursos que he completado a lo largo de mi formación. Cada etapa educativa y cada programa de capacitación han sido esenciales para adquirir los conocimientos y habilidades necesarias para sobresalir en mi campo. Gracias a estos estudios y formaciones, he podido ampliar mis horizontes en diversas áreas, perfeccionar mis competencias y mantenerme al día con las últimas tendencias y avances en el ámbito de la Ingeniería Matemática. Estas experiencias han enriquecido mi desarrollo profesional y me han preparado para afrontar nuevos desafíos con una base sólida y actualizada. </p>
+
  {% for project in projects %}
     <!-- Proyecto -->
     <div class="row project">
