--- a/webpersonal/core/templates/core/contact.html
+++ b/webpersonal/core/templates/core/contact.html
@@ -4,18 +4,17 @@
 {% block background %}{% static 'core/img/contact-bg.jpg' %}{% endblock %}
 {% block headers %}
  <h1>Contacto</h1>
- <span class="subheading">Asesoría</span>
+ <span class="subheading">Redes Sociales</span>
 {% endblock %}
 {% block content %}
 <div class="row">
  <div class="col-lg-8 col-md-10 mx-auto">
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
- Saepe nostrum ullam eveniet pariatur voluptates odit, fuga
- atque ea nobis sit soluta odio, adipisci quas excepturi maxime
- quae totam ducimus consectetur?</p>
+ <p>¡Bienvenido/a a mi página web! Si tienes curiosidad sobre mis proyectos, mis estudios o si estás interesado/a en colaborar, no dudes en escribir. Estaré encantada de saber de ti y responder a todas tus preguntas.</p>
  <br>
- <p><b>Teléfono:</b> +09 876 543 210</p>
- <p><b>Honorarios:</b> 60€/h (precio base)</p>
+ <p><b>Teléfono:</b> +34 699 550 421</p>
+ <p><b>LinkedIn: </b><a href="https://www.linkedin.com/in/clauloro/" target="_blank" style="text-decoration: none;">Claudia López Rodríguez</a></p>
+ <p><b>GitHub: </b> <a href="https://github.com/clauloro" target="_blank" style="text-decoration: none;">@clauloro</a></p>
+ <p><b>Correo electrónico: </b> <a href="mailto: clauloro@myuax.com" target="_blank">clauloro@myuax.com</a></p>
  </div>
 </div>
 {% endblock %}
